--- a/package.json
+++ b/package.json
@@ -13,19 +13,27 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.25.0",
     "expo": "~44.0.0",
+    "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
+    "expo-notifications": "~0.14.0",
+    "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-reanimated": "^2.4.1",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-haptic-feedback": "^1.13.0",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-wagmi-charts": "^2.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
