--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-notifications": "~0.14.0",
     "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
